     New: Added Window menu on Mac OS X.
     New: Added Open Recent menu.
     New: Added Revert to Saved.
     New: Added the ability to apply custom styles to annotations.
     New: Building on the better events from hex-components, the tree now updates only the portion which
          changed instead of updating the whole tree and losing the expansion state.

   Fixed: NullPointerException for new notebooks due to a lack of annotations.
   Fixed: Various application behaviour issues for Mac OS X.
   Fixed: Unsaved document indicator properly reflects the state.

 Changed: Document titles now show the file extension.
 Changed: Actions which require focus now disable when the required focus is not available.
 Changed: Renamed Remove Annotation to Delete and removed Remove Sub-Region since it can be achieved
          via Remove Annotation anyway.

Version 0.3 (2012-11-10)

     New: Annotations not visible in the tree due to their parents being collapsed are now hidden from rendering
          in the viewer.
     New: Selecting an annotation in the tree will select the corresponding range in the viewer.

 Changed: Code usable by other projects was moved out into hex-components (doesn't affect functionality.)
 Changed: Zero-width annotations removed as they were causing altogether too much trouble (e.g. when sorting a list
          of annotations, it's hard to know which one is first.)  The structure DSL is updated to not drop an
          array annotation in if the length would be zero, which was the common cause for it.

Version 0.2 (2011-07-30)

     New: Notes are now editable through the annotations tree view.
     New: It is now possible to delete a sub-region (it was possible using Remove Annotation, but only if there was
          a byte where you could select the sub-region without selecting an annotation.

   Fixed: Adding a 64-bit integer actually added a 16-bit integer of the same kind.